src/test/contracts/negative/polymorphism/monomorphisation_fail.mligo
let f (_ : unit) s = ([], s)

let main ((p, s) : unit * unit) : operation list * unit = f p s
